@@ -62,11 +62,11 @@
     </clr-tab-content>
   </clr-tab>
 
-  <!-- <clr-tab *ngIf="ms.game.tabs.autoBuy.unlocked">
+  <clr-tab *ngIf="ms.game.tabs.autoBuy.unlocked">
     <button clrTabLink>Auto Buyers</button>
     <clr-tab-content *clrIfActive="ms.prestigeTaActive">
       <app-group-auto-buy [unitGroup]="unitGroup"></app-group-auto-buy>
     </clr-tab-content>
-  </clr-tab> -->
+  </clr-tab>
 
 </clr-tabs>
