@@ -3,3 +3,8 @@
     margin-top: -0.4rem;
   }
 }
+
+:host /deep/ h5 {
+  margin-bottom: 15px;
+  margin-top: 8px;
+}
