@@ -23,8 +23,3 @@ clr-datagrid {
   height: 80%;
   justify-content: center;
 }
-
-h5 {
-  margin-bottom: 15px;
-  margin-top: 8px;
-}
